# orangutan

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  run_comprehensive_benchmarks.py
orangutan/: __init__.py
orangutan/baselines/: baseline_implementations.py  pytorch_baselines.py
orangutan/scheduling/: execution_engine.py  negotiation_engine.py
orangutan/simulator/: __init__.py  verified_sim.py  workload_gen.py
orangutan/telemetry/: __init__.py  collector.py  metrics.py  performance_metrics.py
orangutan/verification/: __init__.py  anti_fabrication.py  reproducibility.py  telemetry_validator.py
tests/: test_basic.py  test_verification_system.py
visualization/: generate_charts.py
